# MicSplitter

./: Cargo.toml  config.json
docs/: BACK.md  SPECv0.1.md  memo  win_startup_spec.md  win_tray_window_lifecycle_spec.md
src/: app.rs  audio.rs  config.rs  constants.rs  hotkey.rs  main.rs  ptt.rs  test.rs  tray.rs  ui_helpers.rs
