[package]
name = "mic_splitter"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.18.1"
eframe = "0.29.1"
global-hotkey = "0.8.0"
image = "0.25.10"
ringbuf = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tray-icon = "0.24.1"
windows = { version = "0.62.2", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_Devices_FunctionDiscovery", "Win32_UI_Shell_PropertiesSystem", "Win32_Media_Audio_Endpoints", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
